objects/IntegrationLog__c.object
<CustomObject>
    <label>Integration Log</label>
    <nameField>
        <displayFormat>IL-{YY}-{MM}-{DD}-{00000}</displayFormat>
        <label>Integration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TrialOps</fullName>
                </value>
                <value>
                    <fullName>UpdateProjectName</fullName>
                </value>
                <value>
                    <fullName>UpdateTrialEndDate</fullName>
                </value>
                <value>
                    <fullName>DeleteProject</fullName>
                </value>
                <value>
                    <fullName>SubscriptionOps</fullName>
                </value>
                <value>
                    <fullName>UpdateBillingInformation</fullName>
                </value>
                <value>
                    <fullName>EventsOps</fullName>
                </value>
                <value>
                    <fullName>UpdateUserFullName</fullName>
                </value>
                <value>
                    <fullName>UpdateUserEmail</fullName>
                </value>
                <value>
                    <fullName>UserOps</fullName>
                </value>
                <value>
                    <fullName>ProjectOps</fullName>
                </value>
                <value>
                    <fullName>EraseOldIntegrationLogs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>reactivateTrial</fullName>
                </value>
                <value>
                    <fullName>createTrialLead</fullName>
                </value>
                <value>
                    <fullName>createNewProject</fullName>
                </value>
                <value>
                    <fullName>addNewUser</fullName>
                </value>
                <value>
                    <fullName>removeUser</fullName>
                </value>
                <value>
                    <fullName>changeRole</fullName>
                </value>
                <value>
                    <fullName>freezeUser</fullName>
                </value>
                <value>
                    <fullName>unfreezeUser</fullName>
                </value>
                <value>
                    <fullName>updateProjectName</fullName>
                </value>
                <value>
                    <fullName>updateTrialEndDate</fullName>
                </value>
                <value>
                    <fullName>deleteSpace</fullName>
                </value>
                <value>
                    <fullName>addSubscription</fullName>
                </value>
                <value>
                    <fullName>cancelSubscription</fullName>
                </value>
                <value>
                    <fullName>changePlan</fullName>
                </value>
                <value>
                    <fullName>updateBillingInformation</fullName>
                </value>
                <value>
                    <fullName>updateUserInfo</fullName>
                </value>
                <value>
                    <fullName>updateUserPbOptIn</fullName>
                </value>
                <value>
                    <fullName>eraseFailedLogs</fullName>
                </value>
                <value>
                    <fullName>eraseSuccesfulLogs</fullName>
                </value>
                <value>
                    <fullName>changeUserRole</fullName>
                </value>
                <value>
                    <fullName>disableUser</fullName>
                </value>
                <value>
                    <fullName>activateUser</fullName>
                </value>
                <value>
                    <fullName>updateUserEmail</fullName>
                </value>
                <value>
                    <fullName>updateUserFullName</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manual_Note__c</fullName>
        <inlineHelpText>Manual note, usually about error &amp; correction</inlineHelpText>
        <label>Manual Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Code__c</fullName>
        <label>Response Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Message__c</fullName>
        <label>Response Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <description>Formula field to display date/time for search results + reports. Same value that&apos;s in CreatedDate. Admin only field, not on layout.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Method_Parameters__c</fullName>
        <label>Method Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Success__c</columns>
        <columns>Response_Code__c</columns>
        <columns>Response_Message__c</columns>
        <columns>Class__c</columns>
        <columns>Method__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class__c</field>
            <operation>equals</operation>
            <value>TrialOps</value>
        </filters>
        <label>All</label>
    </listViews>
</CustomObject>